add professional services

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                             I completed my PhD in the College of Computer Science at Zhejiang University with my advisor Prof. <a href="https://person.zju.edu.cn/en/jkzhu">Jianke Zhu</a>. In 2018, I visited the <a href="https://ucsd.edu">University of California, San Diego</a> and worked with Prof. <a href="https://yip.eng.ucsd.edu/">Michael Yip</a> in ECE department. Also, I had worked as a part-time researcher at <a href="https://azft.alibaba.com/">Alibaba-Zhejiang University Joint Institute of Frontier Technologies</a> during my PhD. Prior to that, I spent some years in video game industries at <a href="https://virtuosgames.com/en">Virtuos</a>. 
                         </p>
                         <p style="color:red;">
-                            I am currently looking for MSc students in 2021. If you are interested in my research work, please send your CV and research proposal to liyang89 AT zju DOT edu DOT cn.
+                            I am currently looking for prospective MSc students in 2021. If you are interested in my research work, please send your CV to liyang89 AT zju DOT edu DOT cn.
                         </p>
                     </div>
                 </div>
@@ -69,7 +69,14 @@
                             My research interests are in the areas of Computer Vision and Machine Learning and, particularly, in methods of extracting meaningful information and structural data from videos and raw streaming sources.
                             I am also very interested in finding and defining temporal information between video frames to provide visual perception for cross-disciplinary researches.
                             Currently, my focus is on model-free single object tracking and 3D reconstruction/fusion.
+                            In general, my research area includes:
                         </p>
+                        <ul class="mine">
+                            <li><strong>Computer Vision</strong></li>
+                            <li><strong>Machine Learning</strong></li>
+                            <li><strong>Computer Graphics</strong> (Neural Rendering)</li>
+                            <li><strong>Robotics</strong> (Visual Perception)</li>
+                        </ul>
 
                     </div>
                 </div>
@@ -85,7 +92,7 @@
                             <div class="col-4 col-sm-4 col-xs-12"><img class="portrait img-responsive" src="files/example.gif"></div>
                             <div class="desc col-8 col-sm-8 col-xs-12">
                                 <h4><b>Visual Object Tracking</b></h4> 
-                                <p>Given a video sequence and a selected target in the first frame, visual object tracking aims to track the target object robustly and accurately during the whole video sequence. We are interested in different geometric representations of the tracking algorithm. With various geometric representations, visual object tracking methods can be viewed as basic blocks for many high-level applications, such as surveillance, video editing/analysis, etc. </p>   
+                                <p>Given a video sequence and a selected target in the first frame, visual object tracking aims to track the target object robustly and accurately during the whole video sequence. We are interested in different geometric representations of the tracking algorithm. With various geometric representations, visual object tracking methods can be viewed as basic blocks for many high-level <i>AI</i> applications, such as surveillance, video editing/analysis, etc. </p>   
                             </div>
                         </div>
 
@@ -93,15 +100,15 @@
                             <div class="col-4 col-sm-4 col-xs-12"><img class="portrait img-responsive" src="files/3dreconstruction.gif"></div>
                             <div class="desc col-8 col-sm-8 col-xs-12">
                                 <h4><b>3D Motion Capture</b></h4> 
-                                <p>Taking one step forward, estimating the geometric representation of a visual object in the RGB-D sequence leads us to the 3D motion capture topic. It is highly related to 3D dynamic reconstruction, RGB-D fusion and 3D visual tracking. The algorithm outputs all geometric properties for every pixel in the sequence. It can be viewed as a fundamental 3D perception method which is very useful in AR/VR and robotics. The 3D reconstruction technique can also be applied to game/film making, geography, and so on.  </p>   
+                                <p>Taking one step forward, estimating the geometric representation of a visual object in the RGB-D sequence leads us to the 3D motion capture topic. It is highly related to 3D dynamic reconstruction, RGB-D fusion and 3D visual tracking. The algorithm outputs all geometric properties for every pixel in the sequence. It can be viewed as a fundamental 3D perception method which is very useful in <i>AR/VR</i> and <i>Robotics</i>. The 3D reconstruction technique can also be applied to game/film making, geography, and so on.  </p>   
                             </div>
                         </div>
 
                         <div class="custom-container container">
                             <div class="col-4 col-sm-4 col-xs-12"><img class="portrait img-responsive" src="files/superfull.gif"></div>
                             <div class="desc col-8 col-sm-8 col-xs-12">
-                                <h4><b>Interdisciplinary Projects</b></h4> 
-                                <p>With the capabilities of perceiving visual information in a sequence/video stream, we have succeeded in applying computer vision algorithms to surgical robots to automatically manipulate bio-tissue. In the future, we are planning to continue exploring the possibilities of computer vision-related interdisciplinary projects. </p>   
+                                <h4><b>Visual Perception for Robots</b></h4> 
+                                <p>With the capabilities of perceiving visual information in a sequence/video stream, we have succeeded in applying computer vision algorithms to surgical robots to automatically manipulate bio-tissue. In the future, we are planning to continue exploring the possibilities of <i>AI</i> and <i>Computer Vision</i>-related interdisciplinary projects. </p>   
                             </div>
                         </div>
                     </div>
@@ -266,6 +273,32 @@
                             <i>Journal of Image and Graphics.</i> 2011.16(8):1497-1502.<br>
                             [<a href="http://en.cnki.com.cn/Article_en/CJFDTotal-ZGTB201108022.htm">PDF</a>]
                         </p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 col-sm-12 col-xs-12">
+                        <hr>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-12 col-sm-12 col-xs-12">
+                        <h3>Professional Services</h3>
+                        <ul class="mine">
+                            <li>Program Committee Member of <strong>AAAI (2018-2021)</strong></li>
+                            <li>Program Committee Member of <strong>IJCAI (2018-2020)</strong></li>
+                            <li>Program Committee Member of <strong>ICONIP (2020)</strong></li>
+                            <li>Invited Reviewer for <strong>IEEE Transactions on Image Processing </strong></li>
+                            <li>Invited Reviewer for <strong>IEEE Transactions on Multimedia</strong></li>
+                            <li>Invited Reviewer for <strong>IEEE Robotics and Automation Letters</strong></li>
+                            <li>Invited Reviewer for <strong>IEEE Transactions on Circuits and Systems for Video Technology</strong></li>
+                            <li>Invited Reviewer for <strong>Neurocomputing</strong></li>
+                            <li>Invited Reviewer for <strong>IEEE Signal Processing Letters</strong></li>
+                            <li>Invited Reviewer for <strong>International Journal of Advanced Robotic Systems</strong></li>
+                            
+
+
+                        </ul>
                     </div>
                 </div>
                 <div class="row">
