update ecnu profile

--- a/index.html
+++ b/index.html
@@ -16,24 +16,24 @@
         <div class="container">
             <header class="row">
                 <div class="myinfo col-8 col-sm-6 col-xs-12">
-                    <h1>Yang Li, Ph.D.  </h1>
+                    <h1>Yang Li </h1>
                     <h1>李&nbsp;&nbsp;洋</h1>
-                    <!-- <p>
-                        <a href="http://www.cs.zju.edu.cn/english/">College of Computer Science</a>
+                    <h4>
+                        Associate Professor
+                    </h4>
+                    <p>
+                        <a href="http://www.cs.ecnu.edu.cn">School of Computer Science & Technology</a>
                     </p>
                     <p>
-                        <a href="http://www.zju.edu.cn/english/">Zhejiang University</a>
-                    </p> -->
-                    <p>
-                        Address: RM 101, Zetong Building,
+                        <a href="http://english.ecnu.edu.cn/">East China Normal University</a>
                     </p>
                     <p>
-                        Yuquan Campus, Hangzhou,China
+                        Address: 3663 North Zhongshan Road, Shanghai 200062, China
                     </p>
                     <p>
-                        Email: liyang89 AT zju DOT edu DOT cn
+                        Email: yli AT cs DOT ecnu DOT edu DOT cn
                     </p>
-                   				            <p>[<a href="https://github.com/ihpdep/ihpdep.github.io/raw/master/files/cv-liyang.pdf">Curriculum Vitae</a>][<a href="https://scholar.google.com/citations?user=N1ZDSHYAAAAJ">Google Scholar</a>]</p>
+                   				            <p>[<a href="https://www.semanticscholar.org/author/Y.-Li/50024044">Semantic Scholar</a>][<a href="https://scholar.google.com/citations?user=N1ZDSHYAAAAJ">Google Scholar</a>]</p>
                 </div>
                 <div class="col-4 col-sm-6 col-xs-12">
                     <img class="portrait img-responsive" src="files/photo-new.jpg">
@@ -49,11 +49,11 @@
                     <div class="col-12 col-sm-12 col-xs-12">
                         <h3>About Me</h3>
                         <p>
-                            I am going to join the <a href="http://www.cs.ecnu.edu.cn/">School of Computer Science and Technology</a> at <a href="http://english.ecnu.edu.cn/">East China Normal University</a> as  an associate professor this October.
+                            I am an associate professor in the <a href="http://www.cs.ecnu.edu.cn/">School of Computer Science and Technology</a> at <a href="http://english.ecnu.edu.cn/">East China Normal University</a>.
                             I completed my PhD in the College of Computer Science at Zhejiang University with my advisor Prof. <a href="https://person.zju.edu.cn/en/jkzhu">Jianke Zhu</a>. In 2018, I visited the <a href="https://ucsd.edu">University of California, San Diego</a> and worked with Prof. <a href="https://yip.eng.ucsd.edu/">Michael Yip</a> in ECE department. Also, I had worked as a part-time researcher at <a href="https://azft.alibaba.com/">Alibaba-Zhejiang University Joint Institute of Frontier Technologies</a> during my PhD. Prior to that, I spent some years in video game industries at <a href="https://virtuosgames.com/en">Virtuos</a>. 
                         </p>
-                        <p style="color:red;">
-                            I am currently looking for prospective MSc students in 2021. If you are interested in my research work, please send your CV to liyang89 AT zju DOT edu DOT cn.
+                        <p>
+                            For prospective students, please send me an email with your CV if you are interested in my research work.
                         </p>
                     </div>
                 </div>
