--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                         <p class="pub">
                             <b>SuPer Deep: A Surgical Perception Framework for Robotic Tissue Manipulation using Deep Learning for Feature Extraction</b> <br>
                             Jingpei Lu, Ambareesh Jayakumari, Florian Richter, Yang Li and Michael C. Yip<br>
-                            <i>Arxiv</i>, 2020<br>
+                            <i>ICRA</i>, 2021<br>
                             [<a href="https://arxiv.org/abs/2003.03472">PDF</a>]
 			                      [<a href="https://sites.google.com/ucsd.edu/super-framework">Project Webpage</a>]
                         </p>
