add new AAAI 2022 paper

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 
 <html>
     <head>
@@ -50,11 +50,11 @@
                         <h3>About Me</h3>
                         <p>
                             I am an associate professor in the <a href="http://www.cs.ecnu.edu.cn/">School of Computer Science and Technology</a> at <a href="http://english.ecnu.edu.cn/">East China Normal University</a>.
-                            I completed my PhD in the College of Computer Science at Zhejiang University with my advisor Prof. <a href="https://person.zju.edu.cn/en/jkzhu">Jianke Zhu</a>. In 2018, I visited the <a href="https://ucsd.edu">University of California, San Diego</a> and worked with Prof. <a href="https://yip.eng.ucsd.edu/">Michael Yip</a> in ECE department. Also, I had worked as a part-time researcher at <a href="https://azft.alibaba.com/">Alibaba-Zhejiang University Joint Institute of Frontier Technologies</a> during my PhD. Prior to that, I spent some years in video game industries at <a href="https://virtuosgames.com/en">Virtuos</a>. 
+                            I completed my PhD in the College of Computer Science at Zhejiang University with my advisor Prof. <a href="https://person.zju.edu.cn/en/jkzhu">Jianke Zhu</a>. In 2018, I visited the <a href="https://ucsd.edu">University of California, San Diego</a> and worked with Prof. <a href="https://yip.eng.ucsd.edu/">Michael Yip</a> in ECE department. Also, I had worked as a part-time researcher at <a href="https://azft.alibaba.com/">Alibaba-Zhejiang University Joint Institute of Frontier Technologies</a> during my PhD. Prior to that, I spent some years in video game industries at <a href="https://virtuosgames.com/en">Virtuos</a>.
                         </p>
                         <!-- <p>
-                            For prospective students, please send me an email with your CV if you are interested in my research work.
-                        </p> -->
+                For prospective students, please send me an email with your CV if you are interested in my research work.
+            </p> -->
                     </div>
                 </div>
                 <div class="row">
@@ -91,24 +91,24 @@
                         <div class="custom-container container">
                             <div class="col-4 col-sm-4 col-xs-12"><img class="portrait img-responsive" src="files/example.gif"></div>
                             <div class="desc col-8 col-sm-8 col-xs-12">
-                                <h4><b>Visual Object Tracking</b></h4> 
-                                <p>Given a video sequence and a selected target in the first frame, visual object tracking aims to track the target object robustly and accurately during the whole video sequence. We are interested in different geometric representations of the tracking algorithm. With various geometric representations, visual object tracking methods can be viewed as basic blocks for many high-level <i>AI</i> applications, such as surveillance, video editing/analysis, etc. </p>   
+                                <h4><b>Visual Object Tracking</b></h4>
+                                <p>Given a video sequence and a selected target in the first frame, visual object tracking aims to track the target object robustly and accurately during the whole video sequence. We are interested in different geometric representations of the tracking algorithm. With various geometric representations, visual object tracking methods can be viewed as basic blocks for many high-level <i>AI</i> applications, such as surveillance, video editing/analysis, etc. </p>
                             </div>
                         </div>
 
                         <div class="custom-container container">
                             <div class="col-4 col-sm-4 col-xs-12"><img class="portrait img-responsive" src="files/3dreconstruction.gif"></div>
                             <div class="desc col-8 col-sm-8 col-xs-12">
-                                <h4><b>3D Motion Capture</b></h4> 
-                                <p>Taking one step forward, estimating the geometric representation of a visual object in the RGB-D sequence leads us to the 3D motion capture topic. It is highly related to 3D dynamic reconstruction, RGB-D fusion and 3D visual tracking. The algorithm outputs all geometric properties for every pixel in the sequence. It can be viewed as a fundamental 3D perception method which is very useful in <i>AR/VR</i> and <i>Robotics</i>. The 3D reconstruction technique can also be applied to game/film making, geography, and so on.  </p>   
+                                <h4><b>3D Motion Capture</b></h4>
+                                <p>Taking one step forward, estimating the geometric representation of a visual object in the RGB-D sequence leads us to the 3D motion capture topic. It is highly related to 3D dynamic reconstruction, RGB-D fusion and 3D visual tracking. The algorithm outputs all geometric properties for every pixel in the sequence. It can be viewed as a fundamental 3D perception method which is very useful in <i>AR/VR</i> and <i>Robotics</i>. The 3D reconstruction technique can also be applied to game/film making, geography, and so on.  </p>
                             </div>
                         </div>
 
                         <div class="custom-container container">
                             <div class="col-4 col-sm-4 col-xs-12"><img class="portrait img-responsive" src="files/superfull.gif"></div>
                             <div class="desc col-8 col-sm-8 col-xs-12">
-                                <h4><b>Visual Perception for Robots</b></h4> 
-                                <p>With the capabilities of perceiving visual information in a sequence/video stream, we have succeeded in applying computer vision algorithms to surgical robots to automatically manipulate bio-tissue. In the future, we are planning to continue exploring the possibilities of <i>AI</i> and <i>Computer Vision</i>-related interdisciplinary projects. </p>   
+                                <h4><b>Visual Perception for Robots</b></h4>
+                                <p>With the capabilities of perceiving visual information in a sequence/video stream, we have succeeded in applying computer vision algorithms to surgical robots to automatically manipulate bio-tissue. In the future, we are planning to continue exploring the possibilities of <i>AI</i> and <i>Computer Vision</i>-related interdisciplinary projects. </p>
                             </div>
                         </div>
                     </div>
@@ -126,11 +126,23 @@
                 <div class="row">
                     <div class="col-12 col-sm-12 col-xs-12">
                         <p class="pub">
+                            <b>Homography Decomposition Networks for Planar Object Tracking</b> <br>
+                            Xinrui Zhan, Yueran Liu, Jianke Zhu and Yang Li<br>
+                            <i>The Conference on Association for the Advancement of Artificial Intelligence (AAAI),</i>, 2022<br>
+                            [<a href="https://arxiv.org/abs/2112.07909">PDF</a>]
+                            [<a href="https://github.com/zhanxinrui/HDN">CODE</a>]
+                            [<a href="https://zhanxinrui.github.io/HDN-homepage/">Project Webpage</a>]
+                        </p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 col-sm-12 col-xs-12">
+                        <p class="pub">
                             <b>SuPer Deep: A Surgical Perception Framework for Robotic Tissue Manipulation using Deep Learning for Feature Extraction</b> <br>
                             Jingpei Lu, Ambareesh Jayakumari, Florian Richter, Yang Li and Michael C. Yip<br>
-                            <i>ICRA</i>, 2021<br>
+                            <i>IEEE Conference on Robotics and Automation (ICRA)</i>, 2021<br>
                             [<a href="https://arxiv.org/abs/2003.03472">PDF</a>]
-			                      [<a href="https://sites.google.com/ucsd.edu/super-framework">Project Webpage</a>]
+                            [<a href="https://sites.google.com/ucsd.edu/super-framework">Project Webpage</a>]
                         </p>
                     </div>
                 </div>
@@ -141,18 +153,18 @@
                             Jialiang Zhang, Lixiang Lin, Jianke Zhu, Yang Li, Yun-chen Chen, Yao Hu, Steven C.H. Hoi<br>
                             <i>IEEE Trans. on Multimedia</i>, 2020<br>
                             [<a href="https://arxiv.org/abs/1910.09188">PDF</a>]
-			                      [<a href="https://github.com/kalyo-zjl/APD">CODE</a>]
+                            [<a href="https://github.com/kalyo-zjl/APD">CODE</a>]
                         </p>
                     </div>
                 </div>
-		        <div class="row">
+                <div class="row">
                     <div class="col-12 col-sm-12 col-xs-12">
                         <p class="pub">
                             <b>SuPer: A Surgical Perception Framework for Endoscopic Tissue Manipulation with Surgical Robotics</b> <br>
                             Yang Li, Florian Richter, Jingpei Lu, Emily K. Funk, Ryan K. Orosco, Jianke Zhu and Michael C. Yip<br>
                             <i>IEEE Robotics and Automation Letters</i>, 2020<br>
                             [<a href="https://arxiv.org/abs/1909.05405">PDF</a>]
-			                      [<a href="https://sites.google.com/ucsd.edu/super-framework">Project Webpage</a>]
+                            [<a href="https://sites.google.com/ucsd.edu/super-framework">Project Webpage</a>]
                         </p>
                     </div>
                 </div>
@@ -162,23 +174,23 @@
                             <b>DeepFacade: A deep learning approach to facade parsing with symmetric loss</b> <br>
                             Hantang Liu, Yinghao Xu, Jialiang Zhang, Jianke Zhu, Yang Li, Steve C.H. Hoi<br>
                             <i>IEEE Trans. on Multimedia</i>, 2020<br>
-			    [<a href="https://ieeexplore.ieee.org/document/8979370">PDF</a>]
+                            [<a href="https://ieeexplore.ieee.org/document/8979370">PDF</a>]
                         </p>
                     </div>
                 </div>
-		            <div class="row">
+                <div class="row">
                     <div class="col-12 col-sm-12 col-xs-12">
                         <p class="pub">
                             <b>Robust Estimation of Similarity Transformation for Visual Object Tracking</b> <br>
                             Yang Li, Jianke Zhu, Steven C.H. Hoi, Wenjie Song, Zhefeng Wang, Hantang Liu<br>
                             <i>The Conference on Association for the Advancement of Artificial Intelligence (AAAI)</i>, 2019<br>
                             [<a href="https://arxiv.org/abs/1712.05231">PDF</a>]
-			                      [<a href="https://github.com/ihpdep/LDES">CODE</a>]
+                            [<a href="https://github.com/ihpdep/LDES">CODE</a>]
                             [<a href="https://sites.google.com/view/ldestracker">Project Webpage</a>]
                         </p>
                     </div>
                 </div>
-		            <div class="row">
+                <div class="row">
                     <div class="col-12 col-sm-12 col-xs-12">
                         <p class="pub">
                             <b>Temporally-Adjusted Correlation Filter-based Tracking</b> <br>
@@ -196,7 +208,7 @@
 
                             <i>International Joint Conference on Artificial Intelligence</i> (IJCAI), 2017<br>
                             [<a href="https://github.com/ihpdep/ihpdep.github.io/raw/master/papers/ijcai17_cfnn.pdf">PDF</a>]
-			                      [<a href="https://github.com/enderhsu/CFNN">CODE</a>]
+                            [<a href="https://github.com/enderhsu/CFNN">CODE</a>]
                         </p>
                     </div>
                 </div>
@@ -242,7 +254,8 @@
                             M. Kristan, R. Pflugfelder, et al. (Co-author)<br>
                             <i>In ECCV 2014 Workshops, Workshop on Visual Object Tracking Challenge</i> 2014 <br>
                             [<a href="http://www.epics-project.eu/publications/2014_kristan_iccvw.pdf">PDF</a>]
-                            We won the <i>second place</i> in <a href="http://votchallenge.net/vot2014/index.html">VOT2014 challenge</a>.</p>
+                            We won the <i>second place</i> in <a href="http://votchallenge.net/vot2014/index.html">VOT2014 challenge</a>.
+                        </p>
                     </div>
                 </div>
                 <div class="row">
@@ -285,7 +298,7 @@
                     <div class="col-12 col-sm-12 col-xs-12">
                         <h3>Professional Services</h3>
                         <ul class="mine">
-                            <li>Program Committee Member of <strong>AAAI (2018-2021)</strong></li>
+                            <li>Program Committee Member of <strong>AAAI (2018-2022)</strong></li>
                             <li>Program Committee Member of <strong>IJCAI (2018-2020)</strong></li>
                             <li>Program Committee Member of <strong>ICONIP (2020)</strong></li>
                             <li>Invited Reviewer for <strong>IEEE Transactions on Image Processing </strong></li>
@@ -295,7 +308,7 @@
                             <li>Invited Reviewer for <strong>Neurocomputing</strong></li>
                             <li>Invited Reviewer for <strong>IEEE Signal Processing Letters</strong></li>
                             <li>Invited Reviewer for <strong>International Journal of Advanced Robotic Systems</strong></li>
-                            
+
 
 
                         </ul>
@@ -307,12 +320,12 @@
                     </div>
                 </div>
 
-                
+
                 <center>
                     <script type='text/javascript' id='clustrmaps' src='https://cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=300&t=tt&d=U_jew6EMXsGBevNcBBxwLKEy57jIMni4L31hdsHL3Yg'></script>
                 </center>
 
-        </main>
+            </main>
     </div>
 
 </body></html>
