--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                         <p class="pub">
                             <b>Homography Decomposition Networks for Planar Object Tracking</b> <br>
                             Xinrui Zhan, Yueran Liu, Jianke Zhu and Yang Li<br>
-                            <i>The Conference on Association for the Advancement of Artificial Intelligence (AAAI),</i>, 2022<br>
+                            <i>The Conference on Association for the Advancement of Artificial Intelligence (AAAI)</i>, 2022<br>
                             [<a href="https://arxiv.org/abs/2112.07909">PDF</a>]
                             [<a href="https://github.com/zhanxinrui/HDN">CODE</a>]
                             [<a href="https://zhanxinrui.github.io/HDN-homepage/">Project Webpage</a>]
