--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 ﻿<!DOCTYPE html>
-
+<style>
+    body {
+        filter: grayscale(1);
+    }
+</style>
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
