--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 ﻿<!DOCTYPE html>
-<style>
+<!-- <style>
     body {
         filter: grayscale(1);
     }
-</style>
+</style> -->
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
