update research direction and paper list

--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
                         <h3>Research Interest</h3>
                         <p>
                             My research interests are in the areas of Computer Vision and Machine Learning and, particularly, in methods of extracting meaningful information and structural data from videos and raw streaming sources.
-                            I am also very interested in finding and defining temporal information between video frames to provide visual perception for cross-disciplinary researches.
-                            Currently, my focus is on model-free single object tracking and 3D reconstruction/fusion.
+                            I am also very interested in finding and defining structural information in video frames to provide visual perception for cross-disciplinary researches.
+                            Currently, my focus is on visual object tracking, 3D reconstruction/fusion/MVS and NeRF-related works.
                             In general, my research area includes:
                         </p>
                         <ul class="mine">
@@ -109,12 +109,23 @@
                         </div>
 
                         <div class="custom-container container">
+                            <div class="col-4 col-sm-4 col-xs-12"><img class="portrait img-responsive" src="files/nerf.gif"></div>
+                            <div class="desc col-8 col-sm-8 col-xs-12">
+                                <h4><b>Scene Reconstruction & Neural Rendering</b></h4>
+                                <p>With all geometric properties, the next step is to visualize to what human being could understand. To this end, reconstruction and rendering related topics come to our research directions. Based on deep learning, we can bring the real work back onto screen without traditional computer graphics pipeline. We value these topics as next generation tech. for <i>Games</i> and <i>Metaverse</i>.  </p>
+                            </div>
+                        </div>
+
+
+                        <div class="custom-container container">
                             <div class="col-4 col-sm-4 col-xs-12"><img class="portrait img-responsive" src="files/superfull.gif"></div>
                             <div class="desc col-8 col-sm-8 col-xs-12">
                                 <h4><b>Visual Perception for Robots</b></h4>
-                                <p>With the capabilities of perceiving visual information in a sequence/video stream, we have succeeded in applying computer vision algorithms to surgical robots to automatically manipulate bio-tissue. In the future, we are planning to continue exploring the possibilities of <i>AI</i> and <i>Computer Vision</i>-related interdisciplinary projects. </p>
+                                <p>With the capabilities of perceiving visual information in a sequence/video stream, we have succeeded in applying computer vision algorithms to surgical robots to automatically manipulate bio-tissue. In the future, we are planning to continue exploring the possibilities of <i>AGI</i> and <i>Embodied Intelligence</i>-related interdisciplinary projects. </p>
                             </div>
                         </div>
+
+
                     </div>
                 </div>
                 <div class="row">
@@ -125,6 +136,49 @@
                 <div class="row">
                     <div class="col-12 col-sm-12 col-xs-12">
                         <h3>Publications</h3>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 col-sm-12 col-xs-12">
+                        <p class="pub">
+                            <b>AdaptMVSNet: Efficient Multi-View Stereo with Adaptive Convolution and Attention Fusion</b> <br>
+                            Pengfei Jiang, Xiaoyan Yang, Yuanjie Chen, Wenjie Song, Yang Li<br>
+                            <i>Computers & Graphics</i>, 2023<br>
+                            [<a href="https://www.sciencedirect.com/science/article/pii/S0097849323001838">PAPER</a>]
+                            [<a href="https://github.com/HDjpf/AdaptMVSNet">CODE</a>]
+                        </p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 col-sm-12 col-xs-12">
+                        <p class="pub">
+                            <b>Contact-conditioned Hand-held Object Reconstruction from Single-View Images</b> <br>
+                            Xiaoyuan Wang, Yang Li, Adnane Boukhayma, Changbo Wang, Marc Christie<br>
+                            <i>Computers & Graphics</i>, 2023<br>
+                            [<a href="https://www.sciencedirect.com/science/article/pii/S009784932300078X">PAPER</a>]
+                        </p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 col-sm-12 col-xs-12">
+                        <p class="pub">
+                            <b>InvVis: Large-Scale Data Embedding for Invertible Visualization</b> <br>
+                            Huayuan Ye, Chenhui Li, Yang Li, Changbo Wang<br>
+                            <i>IEEE Transactions on Visualization and Computer Graphics</i>, 2023<br>
+                            [<a href="https://arxiv.org/pdf/2307.16176.pdf">PDF</a>]
+                            [<a href="https://github.com/huayuan4396/InvVis">CODE</a>]
+                        </p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 col-sm-12 col-xs-12">
+                        <p class="pub">
+                            <b>Multi-Source Templates Learning for Real-Time Aerial Tracking</b> <br>
+                            Yiming Sun, Yang Li, Changbo Wang<br>
+                            <i>IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)</i>, 2023<br>
+                            [<a href="https://ieeexplore.ieee.org/document/10094642">PAPER</a>]
+                            [<a href="https://github.com/vpx-ecnu/MSTL">CODE</a>]
+                        </p>
                     </div>
                 </div>
                 <div class="row">
