--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <p>
                         Email: yli AT cs DOT ecnu DOT edu DOT cn
                     </p>
-                   				            <p>[<a href="https://www.semanticscholar.org/author/Y.-Li/50024044">Semantic Scholar</a>][<a href="https://scholar.google.com/citations?user=N1ZDSHYAAAAJ">Google Scholar</a>][<a href="https://faculty.ecnu.edu.cn/_s16/ly2_19214/main.psp">中文</a>]</p>
+                   				            <p>[<a href="https://www.semanticscholar.org/author/Y.-Li/50024044">Semantic Scholar</a>][<a href="https://scholar.google.com/citations?user=N1ZDSHYAAAAJ">Google Scholar</a>][<a href="https://faculty.ecnu.edu.cn/_s16/ly2_19214/main.psp">中文</a>][<a href="https://space.bilibili.com/487404760">Bilibili</a>]</p>
                 </div>
                 <div class="col-4 col-sm-6 col-xs-12">
                     <img class="portrait img-responsive" src="files/photo-new.jpg">
@@ -70,16 +70,16 @@
                     <div class="col-12 col-sm-12 col-xs-12">
                         <h3>Research Interest</h3>
                         <p>
-                            My research interests are in the areas of Computer Vision and Machine Learning and, particularly, in methods of extracting meaningful information and structural data from videos and raw streaming sources.
-                            I am also very interested in finding and defining structural information in video frames to provide visual perception for cross-disciplinary researches.
-                            Currently, my focus is on visual object tracking, 3D reconstruction/fusion/MVS and NeRF-related works.
+                            My research interests are in the areas of Computer Vision, Computer Graphics, Robotics and, particularly, in methods of extracting meaningful information and structural data from videos and raw streaming sources.
+                            I am also very interested in finding and defining structural information in video frames to provide visual perception for cross-disciplinary researches, e.g. robotic manipulation.
+                            Currently, my focus is on visual object tracking, 3D reconstruction/fusion/MVS, neural-rendering/diffusion and cloth manipulation works.
                             In general, my research area includes:
                         </p>
                         <ul class="mine">
                             <li><strong>Computer Vision</strong></li>
                             <li><strong>Machine Learning</strong></li>
                             <li><strong>Computer Graphics</strong> (Neural Rendering)</li>
-                            <li><strong>Robotics</strong> (Visual Perception)</li>
+                            <li><strong>Robotics</strong> (Visual Perception and Manipulation)</li>
                         </ul>
 
                     </div>
@@ -135,7 +135,38 @@
                 </div>
                 <div class="row">
                     <div class="col-12 col-sm-12 col-xs-12">
-                        <h3>Publications</h3>
+                        <h3>Selected Publications</h3>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 col-sm-12 col-xs-12">
+                        <p class="pub">
+                            <b>ClothPPO: A Proximal Policy Optimization Enhancing Framework for Robotic Cloth Manipulation with Observation-Aligned Action Spaces</b> <br>
+                            Libing Yang, Yang Li, Long Chen<br>
+                            <i>International Joint Conference on Artificial Intelligence</i> (IJCAI), 2024<br>
+                            [<a href="https://arxiv.org/abs/2405.04549">PAPER</a>]
+                            [<a href="https://vpx-ecnu.github.io/ClothPPO-website">Project Webpage</a>]
+                        </p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 col-sm-12 col-xs-12">
+                        <p class="pub">
+                            <b>Multi-Prototype Space Learning for Commonsense-Based Scene Graph Generation</b> <br>
+                            Lianggangxu Chen, Youqi Song, Yiqing Cai, Jiale Lu, Yang Li, Yuan Xie, Changbo Wang, Gaoqi He<br>
+                            <i>The Conference on Association for the Advancement of Artificial Intelligence</i> (AAAI), 2024<br>
+                            [<a href="https://ojs.aaai.org/index.php/AAAI/article/view/27874/27773">PAPER</a>]
+                        </p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 col-sm-12 col-xs-12">
+                        <p class="pub">
+                            <b>RAGT: Learning Robust Features for Occluded Human Pose and Shape Estimation with Attention-Guided Transformer</b> <br>
+                            Ziqing Li, Yang Li, Shaohui Lin<br>
+                            <i>CAD&Graphics</i>, 2023<br>
+                            [<a href="https://link.springer.com/chapter/10.1007/978-981-99-9666-7_22">PAPER</a>]
+                        </p>
                     </div>
                 </div>
                 <div class="row">
@@ -355,10 +386,11 @@
                 <div class="row">
                     <div class="col-12 col-sm-12 col-xs-12">
                         <h3>Professional Services</h3>
-                        <ul class="mine">
+                        <ul class="mine">                           
                             <li>Program Committee Member of <strong>AAAI (2018-2022)</strong></li>
                             <li>Program Committee Member of <strong>IJCAI (2018-2020)</strong></li>
                             <li>Program Committee Member of <strong>ICONIP (2020)</strong></li>
+                            <li>Invited Reviewer for <strong>International Journal of Computer Vision </strong></li>
                             <li>Invited Reviewer for <strong>IEEE Transactions on Image Processing </strong></li>
                             <li>Invited Reviewer for <strong>IEEE Transactions on Multimedia</strong></li>
                             <li>Invited Reviewer for <strong>IEEE Robotics and Automation Letters</strong></li>
@@ -366,7 +398,7 @@
                             <li>Invited Reviewer for <strong>Neurocomputing</strong></li>
                             <li>Invited Reviewer for <strong>IEEE Signal Processing Letters</strong></li>
                             <li>Invited Reviewer for <strong>International Journal of Advanced Robotic Systems</strong></li>
-
+                            <li>Reviewer of <strong>CVPR, ECCV, MM, NeurIPS</strong></li>
 
 
                         </ul>
