--- a/index.html
+++ b/index.html
@@ -138,6 +138,17 @@
                         <h3>Selected Publications</h3>
                     </div>
                 </div>
+		<div class="row">
+                    <div class="col-12 col-sm-12 col-xs-12">
+                        <p class="pub">
+                            <b>FIND: Fine-tuning Initial Noise Distribution with Policy Optimization for Diffusion Models</b> <br>
+                            Changgu Chen, Libing Yang, Xiaoyan Yang, Lianggangxu Chen, Gaoqi He, Changbo Wang, Yang Li<br>
+                            <i>ACM Multimedia</i>, 2024<br>
+                            <!-- [<a href="https://arxiv.org/abs/2405.04549">PAPER</a>] -->
+                            <!-- [<a href="https://vpx-ecnu.github.io/ClothPPO-website">Project Webpage</a>] -->
+                        </p>
+                    </div>
+                </div>
                 <div class="row">
                     <div class="col-12 col-sm-12 col-xs-12">
                         <p class="pub">
