--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
                             <b>FIND: Fine-tuning Initial Noise Distribution with Policy Optimization for Diffusion Models</b> <br>
                             Changgu Chen, Libing Yang, Xiaoyan Yang, Lianggangxu Chen, Gaoqi He, Changbo Wang, Yang Li<br>
                             <i>ACM Multimedia</i>, 2024<br>
-                            <!-- [<a href="https://arxiv.org/abs/2405.04549">PAPER</a>] -->
-                            <!-- [<a href="https://vpx-ecnu.github.io/ClothPPO-website">Project Webpage</a>] -->
+                            [<a href="https://arxiv.org/abs/2407.19453">PAPER</a>]
+                            [<a href="https://vpx-ecnu.github.io/FIND-website/">Project Webpage</a>]
                         </p>
                     </div>
                 </div>
